- #408    Update documentation of hint `:all`
          (thanks to quazgar)
- #437    Minor AtomicFile cleanup
          (thanks to Shaun Ruffel)
- #458    Add man documentation for configuring tag colors.
          (thanks to Lim Ding Wen)
- #463    Add colors to summary
          (thanks to Lim Ding Wen)
- #466    Ignore empty exclusion ranges
- #468    Refactor interval filtering
- #469    Do not leak IntervalFilters in IntervalFilterAndGroup
          (thanks to Shaun Ruffel)
- #470    Do not leak filter in IntervalFilterFirstOf
          (thanks to Shaun Ruffel)

------ current release ---------------------------

1.4.3 (2021-05-28) - fc618636aacba6e52d447b482aeef58b375dfc8c

- #159    Tags enclosed in escaped double-quotes are not handled correctly
          (thanks to Shaun Ruffell)
- #379    CmdSummary: Fix calculation of display start in summary table
          (thanks to Shaun Ruffell)
- #387    Fixed URL for tarball download
          (thanks to Joerg Kastning)
- #390    dom.tracked.X.tag.Y always returns dom.tracked.1.tag.Y
          (thanks to pweaver2019)
- #393    Update dark_blue.theme
          (thanks to Peter Zuidema)
- #398    test: Thread.isAlive() -> Thread.is_alive()
          (thanks to Shaun Ruffell)
- #410    Replace roff man pages with asciidoctor
- #411    Transfer platform testing from Travis CI to Github Actions
- #416    Internal error. Failed encode / decode check when doing undo
          (thanks to narudarurarasya, Shaun Ruffel)
- #419    Links not preserved over linebreaks in man page
          (thanks to draupadi77)
- #422    Internal error. Failed encode / decode check.
          (thanks to Glen Solsberry, Shaun Ruffell)
-         Width determination of Unicode characters now works for up to
          Unicode 11 (from Unicode 5). Emojis are correctly displayed.
-         Fix test `summary.t` for single-digit weeks

------ old releases ------------------------------

1.4.2 (2020-08-29) - 4aa8489243adb69958d7717fb2f010c72fd4505a
